--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* defaults */
 * {
   box-sizing: border-box;
 }
@@ -10,13 +11,61 @@ body {
   padding: 0;
 }
 
-#dark-mode:checked ~ .theme-wrapper {
-  background-color: navy;
-  color: ivory;
+/* theme definitions */
+/* dark mode toggle style based on https://endtimes.dev/no-javascript-dark-mode-toggle/ */
+:root {
+  --bg: white;
+  --text: black;
+  --navlink: green;
 }
 
-main {
-  border: solid 4px navy;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg: black;
+    --text: white;
+    --navlink: lightsalmon;
+  }
+}
+
+#color-toggle:checked ~ .theme-wrapper {
+  --bg: black;
+  --text: white;
+  --navlink: lightsalmon;
+}
+
+@media (prefers-color-scheme: dark) {
+  #color-toggle:checked ~ .theme-wrapper {
+    --bg: white;
+    --text: black;
+    --navlink: green;
+  }
+}
+
+/* element styling */
+h1 {
+  margin-top: 0;
+}
+
+#color-toggle {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+
+.theme-wrapper {
+  min-height: 100vh;
+  padding: 1rem;
+  display: grid;
+  /* header, main, footer */
+  grid-template-rows: min-content 1fr min-content;
+  background-color: var(--bg);
+  color: var(--text);
+  font-family: monospace;
+}
+
+nav a:link,
+nav a:visited {
+  color: var(--navlink);
 }
 
 section {
@@ -25,4 +74,5 @@ section {
 
 :target {
   display: block;
+  height: 100%; 
 }
