--- a/style.css
+++ b/style.css
@@ -14,30 +14,30 @@ body {
 /* theme definitions */
 /* dark mode toggle style based on https://endtimes.dev/no-javascript-dark-mode-toggle/ */
 :root {
-  --bg: white;
-  --text: black;
-  --navlink: green;
+  --bg: hsla(161, 62%, 95%, 1);
+  --text: hsla(216, 22%, 23%, 1);
+  --navlink: hsla(341, 40%, 42%, 1);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --bg: black;
-    --text: white;
-    --navlink: lightsalmon;
+    --bg: hsla(216, 22%, 23%, 1);
+    --text: hsla(161, 62%, 95%, 1);
+    --navlink: hsla(160, 25%, 61%, 1);
   }
 }
 
 #color-toggle:checked ~ .theme-wrapper {
-  --bg: black;
-  --text: white;
-  --navlink: lightsalmon;
+  --bg: hsla(216, 22%, 23%, 1);
+  --text: hsla(161, 62%, 95%, 1);
+  --navlink: hsla(160, 25%, 61%, 1);
 }
 
 @media (prefers-color-scheme: dark) {
   #color-toggle:checked ~ .theme-wrapper {
-    --bg: white;
-    --text: black;
-    --navlink: green;
+    --bg: hsla(161, 62%, 95%, 1);
+    --text: hsla(216, 22%, 23%, 1);
+    --navlink: hsla(341, 40%, 42%, 1);
   }
 }
 
@@ -74,5 +74,5 @@ section {
 
 :target {
   display: block;
-  height: 100%; 
+  height: 100%;
 }
